refactor: updated status strings to capital snake casing
