# services/product-catalog-service/docs/swagger.json
@@ -427,7 +427,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "Filter by status (draft|active|inactive|archived)",
+                        "description": "Filter by status (DRAFT|ACTIVE|INACTIVE|ARCHIVED)",
                         "name": "status",
                         "in": "query"
                     },
@@ -1529,10 +1529,10 @@
         "domain.ProductStatus": {
             "type": "string",
             "enum": [
-                "draft",
-                "active",
-                "inactive",
-                "archived"
+                "DRAFT",
+                "ACTIVE",
+                "INACTIVE",
+                "ARCHIVED"
             ],
             "x-enum-varnames": [
                 "ProductStatusDraft",
